@@ -3,7 +3,7 @@
         tal:attributes="size field.widget.size"
         tal:attributes="class field.widget.css_class">
  <option tal:repeat="(value, description) field.widget.values"
-         tal:attributes="selected value == cstruct and 'selected';
+         tal:attributes="selected str(value) == cstruct and 'selected';
                          class field.widget.css_class"
          value="${value}">${description}</option>
 </select>
