@@ -613,11 +613,13 @@ class SelectWidget(Widget):
     **Attributes/Arguments**
 
     values
-        A sequence of two-tuples (both values must be **string** or
-        **unicode** values) indicating allowable, displayed values,
-        e.g. ``( ('true', 'True'), ('false', 'False') )``.  The first
-        element in the tuple is the value that should be returned when
-        the form is posted.  The second is the display value.
+
+        A sequence of two-tuples (the first value must be of type
+        string, unicode or integer, the second value must be string or
+        unicode) indicating allowable, displayed values, e.g. ``(
+        ('true', 'True'), ('false', 'False') )``.  The first element
+        in the tuple is the value that should be returned when the
+        form is posted.  The second is the display value.
 
     size
         The ``size`` attribute of the select input field (default:
